src/styles/Intro.css
/* CSS Variables for easy theme management */
:root {
    --lightest-slate: #F5F5F5;
    /* I assumed some colors, replace with your own */
    --green-bright: #2ECC71;
    --slate: #7B8D93;
    --lightest-navy: #2C3E50;
}

#intro {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
}

.lottie-animation {
    margin-bottom: 20px;
    width: 20vw;
    height: 20vw;
    padding-left: 70%;
}

.intro-container {
    padding: 15px;
    padding-top: 5px;
    font-size: 72px;
    text-align: center;
    padding-right: 40%;
}

.ut-dialogue {
    color: var(--lightest-slate);
}

.intro-name {
    color: #EE4266;
    font-weight: bold;
}


@media only screen and (max-width: 788px) {
    .lottie-animation {
        width: 40vw;
        height: 40vw;
    }
}


@media only screen and (max-width: 600px) {
    #intro {
        /* min-height: unset; */
        padding-left: unset;
        margin: 0;
        align-items: center;
    }

   .lottie-animation {
        width: 15vw;
        height: 15vw;
    }

    .intro-container {
        display: flex;
        flex-direction: column;
        font-size: 40px;
    }

    .ut-dialogue {
        font-size: 40px;
    }

    .intro-name {
        font-size: 40px;
    }

        .lottie-animation {
            margin-bottom: 20px;
            width: 20vw;
            height: 20vw;
        }
    
        .intro-container {
            padding: 15px;
            padding-top: 5px;
            font-size: 72px;
            text-align: center;
git         }
}

